feat: add Orin's confession choice
